first layouting for main screen

--- a/Peng/Info.plist
+++ b/Peng/Info.plist
@@ -44,6 +44,10 @@
 			<false/>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Futura-Extended.ttf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
