added model binding

--- a/Peng/Info.plist
+++ b/Peng/Info.plist
@@ -21,6 +21,8 @@
 	<string>746478115480021</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>furfm.de</key>
